# CorbeauSplat

./: .gitignore  CHANGELOG.md  CLI.md  Makefile  README.md  audit_journal.json  claude.md  config.example.json  feature-proposal.md  journal.jsonl  journal.md  journal_archive.md  main.py  manifest.md  mast3r_sfm_venv_install.md  opencode.multimodel.json  pyproject.toml  requirements.lock.bak  requirements.txt  run.command  verify_imports.py  verify_integrity.py
.claude/: settings.local.json
.github/workflows/: ci.yml
.opencode/plans/: deepseek_maj.md
.serena/: project.yml
app/: __init__.py  upscayl_manager.py  upscayl_models.py
app/cli/: __init__.py  commands.py  launcher.py  parser.py
app/core/: base_engine.py  brush_engine.py  colmap_commands.py  engine.py  export_engine.py  extractor_360_engine.py  four_dgs_engine.py  i18n.py  params.py  ply_cleaner.py  ply_utils.py  sharp_engine.py  splat_transform_engine.py  superplat_engine.py  system.py  upscale_engine.py
app/gui/: base_worker.py  main_window.py  managers.py  styles.py  workers.py
app/scripts/: __init__.py  migrate_to_py39.py  setup_dependencies.py  upscale_runner.py
assets/: icon.icns
assets/locales/: ar.json  de.json  en.json  es.json  fr.json  it.json  ja.json  ru.json  zh.json
tests/: conftest.py  test_base_engine.py  test_brush_engine.py  test_cli.py  test_colmap_engine.py  test_export_engine.py  test_extractor_360_engine.py  test_four_dgs_engine.py  test_managers.py  test_ply_cleaner.py  test_setup_dependencies.py  test_sharp_engine.py  test_upscayl_manager.py  test_workers.py
(+36 files in other folders)
