[project]
name = "corbeausplat"
version = "1.1.0"
description = "Gaussian Splatting toolkit with GUI"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6,<7",
    "requests>=2.32,<3",
    "urllib3>=2.0,<3",
    "numpy>=1.26,<3",
    "send2trash>=1.8,<2",
    "pyobjc-framework-Cocoa>=10.0,<11",
    "Pillow>=10.0,<12",
    "plyfile>=0.7,<1",
    "opencv-python-headless>=4.8,<5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11,<1",
    "mypy>=1.15,<2",
    "pytest>=9.0,<10",
    "pytest-qt>=4.4,<5",
    "pip-audit>=2.8,<3",
    "pip-tools>=7.4,<8",
]

[tool.ruff]
target-version = "py310"
line-length = 120
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["PyQt6.*", "cv2.*", "numpy.*", "plyfile.*", "trimesh.*", "open3d.*", "PIL.*", "send2trash.*", "objc.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
